# tree-sitter-riscvasm

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
examples/: simple.s
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
