[package]
name = "tree-sitter-riscvasm"
version = "0.1.1"
keywords = ["parser","dev-tool"]
edition = "2018"


build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"


[build-dependencies]
cc = "1.0"
